Gnome: Fix wrong background color in calculator app

--- a/gtk-4.0/widgets/_base-states.scss
+++ b/gtk-4.0/widgets/_base-states.scss
@@ -45,6 +45,7 @@
   }
 }
 
+.history-view,
 .view,
 %view {
   color: $text_color;
